syntax = "proto3";

package merkledb;

option java_package = "com.swirlds.merkledb.files";
option java_multiple_files = true;

message Bucket {

    // Bucket index
    optional uint32 index = 1;

    // Items
    repeated BucketEntry entries = 11;
}

message BucketEntry {

    // Key hash code
    int32 hashCode = 1;

    // Entry value, e.g. path
    optional int64 value = 2;

    // Serialized key
    bytes keyBytes = 3;
}
